move release notes to a seperate dir

--- a/getting-started/release-notes/v0.3.md
+++ b/getting-started/release-notes/v0.3.md
@@ -1,3 +1,6 @@
+# KubeArmor v0.3 Release Notes
+
+KubeArmor adds a number of new capabilities in this 0.3 release, including:
 ## Default Security Posture (@daemon1024)
 One of the tenets of achieving Zero Trust stature requires one to set the workloads in "least-permissive mode". Setting up least-permissive mode can be fraught with challenges and it is important that the tooling supports gradual upgrade to the least-permissive mode. One of the important tool is setting audit or dry-run mode for the policies before one can use the block/deny mode.
 
