--- a/getting-started/release-notes/v0.5.md
+++ b/getting-started/release-notes/v0.5.md
@@ -1,3 +1,4 @@
+# KubeArmor v0.5 Release Notes
 KubeArmor adds a number of new capabilities in this 0.5 release, including:
 * support for BPF-LSM policy enforcement,
 * integration with the Kubernetes admission controller, and
