--- a/getting-started/release-notes/v0.6.md
+++ b/getting-started/release-notes/v0.6.md
@@ -1,3 +1,5 @@
+# KubeArmor v0.6 Release Notes
+
 ## Support for non-orchestrated containers
 
 KubeArmor already has support for K8s orchestrated and Bare-Metal/VM workloads.
