--- a/getting-started/release-notes/v0.7.md
+++ b/getting-started/release-notes/v0.7.md
@@ -1,8 +1,10 @@
-# ARM support for KubeArmor
+# KubeArmor Release Notes v0.7
+
+### ARM support for KubeArmor
 
 <img src="https://user-images.githubusercontent.com/9133227/201508738-31ba6324-9d01-4425-8f02-c6f9c16c30dd.png" width="256" class="center" alt="ARM KubeArmor support">
 
-### Why the support was considered?
+
 KubeArmor is increasingly deployed in [near-edge and far-edge scenarios](https://tech.ginkos.in/2019/06/far-edge-vs-near-edge-in-edge-computing.html) for enhanching security for IoT/Edge aspects. KubeArmor has added support to handle the characteristics of edge scenarios such as:
 1. Support for heterogenous platforms (most of the edge is deployed on ARM, Intel). KubeArmor ensures that the same policy enforcement techniques are delivered across different linux kernel versions. It does this by abstracting the policy layer from the enforcement layer and the enforcement layer uses the techniques that are available in the context of the deployed worker node.
 2. Edge devices are constrained in terms of CPU and memory availability. The overall resource usage on KubeArmor has been drastically reduced. This has not only helped edge scenarios but cloud based deployments as well.
@@ -15,7 +17,7 @@ Recently KubeArmor finished its [integration with LF Edge Open Horizon](https://
 2. Azure ARM VM
 3. Apple Macbook M1 laptops
 
-# Network Policy & Microsegmentation support using KubeArmor
+## Network Policy & Microsegmentation support using KubeArmor
 
 In Kubernetes, the [network policy resource](https://kubernetes.io/docs/concepts/services-networking/network-policies/) is a set of network traffic rules that are applied to a group of pods in a Kubernetes cluster. The network policy specifies how a pod is allowed to communicate with others. Network policy controllers (running as pods in the Kubernetes cluster) convert the requirements and restrictions of the network policies that are retrieved from the Kubernetes API into the network infrastructure.
 
@@ -25,7 +27,7 @@ This release allows kubearmor and discovery-engine to do automatic network micro
 
 <img src="https://user-images.githubusercontent.com/9133227/201518064-f52b897e-3c60-4440-88ba-bc3cd1c0f147.png" width="512" class="center" alt="K8s network policy rule support using kubearmor">
 
-# Container based policy support
+## Container based policy support
 
 KubeArmor currently applies policy at the pod level i.e. in the `KubeArmorPolicy` you specify the selector labels which selects a set of pods across the cluster. However, a single pod may contain multiple containers and each container usually has a very different purpose and the set of binaries or file paths may vary across multiple containers within the pod.
 
@@ -73,7 +75,7 @@ This release achieves following in the context:
 
 Kudos to [Anurag Kumar](https://github.com/kranurag7) who achieved this as part [LFX Mentorship Project](https://mentorship.lfx.linuxfoundation.org/project/3cc962b4-cd8b-46ea-9c77-83304145fd51).
 
-# Workload behavior summary with KubeArmor and Discovery Engine
+## Workload behavior summary with KubeArmor and Discovery Engine
 
 KubeArmor can observe system events at different dimensions including, Process, File, and Network events. Discovery Engine connects to KubeArmor and does aggregation of this information over a time period to provide app behavior summary. The use-cases for this summary view are:
 1. User can view what are the different process getting spawned in the given workload. Workload could be filtered based on namespace, labels etc.
@@ -153,7 +155,7 @@ Egress connections
 
 ```
 
-# Policy Recommendations and Reports
+## Policy Recommendations and Reports
 KubeArmor already had a community driven curated list of System and Network policy templates at [policy-template](https://github.com/kubearmor/policy-templates) repository.
 With the templates, it was upto the user to change values like `namespace` `labels` etc to make sure that the policies are actually enforcing on their cluster.
 
@@ -191,7 +193,7 @@ Global Flags:
 Use "karmor recommend [command] --help" for more information about a command.
 ```
 
-# Bug fixes and improvements
+## Bug fixes and improvements
 - Ability to specific LSM order ([#788](https://github.com/kubearmor/KubeArmor/issues/788)). On certain platforms it is possible that multiple LSMs are available for enforcing a policy. For e.g., in case of Google COS (Container Optimized OS), both AppArmor and BPF-LSM are available. By default, KubeArmor chooses BPF-LSM if available, but with this change it is possible to specify the LSM order that could be used for policy enforcement.
 - Support for readOnly flag with BPF-LSM ([#962](https://github.com/kubearmor/KubeArmor/pull/962))
 - Fix AppArmor policies behavior ([#954](https://github.com/kubearmor/KubeArmor/issues/954))
