--- a/getting-started/release-notes/v0.8.md
+++ b/getting-started/release-notes/v0.8.md
@@ -1,3 +1,4 @@
+# KubeArmor v0.8 Release Notes
 ## KubeArmor passes AWS Foundational Technical Review (FTR)
 
 The [Amazon Foundational Technical Review (FTR)](https://aws.amazon.com/partners/foundational-technical-review/) is a framework that enables AWS Partners to detect and remediate issues in solutions and products. It focuses on quality, reliability, and safety and outlines the best practices to meet the set requirements.
