--- a/getting-started/release-notes/v1.1.md
+++ b/getting-started/release-notes/v1.1.md
@@ -1,4 +1,4 @@
-# KubeArmor v1.1 Blog
+# KubeArmor v1.1 Release Notes
 
 - KubeArmor on RedHat Ecosystem #1294 ✅
 - list the applied policies for unorchestrated workloads #1311 ✅
