--- a/getting-started/release-notes/v1.4.md
+++ b/getting-started/release-notes/v1.4.md
@@ -1,5 +1,4 @@
-# KubeArmor v1.3.0 Release Blog
-v1.3.0 release includes new improvements to enhance the security, usability, and performance of KubeArmor along with some bug fixes. We list major changes below.
+# KubeArmor v1.4.0 Release Notes
 
 [KubeArmor Operator as the Default Installation Method](#kubearmor-operator-as-the-default-installation-method)
 
