--- a/getting-started/release-notes/v1.5.md
+++ b/getting-started/release-notes/v1.5.md
@@ -1,4 +1,4 @@
-# KubeArmor v1.5.0 Release Blog
+# KubeArmor v1.5.0 Release Notes
 
 KubeArmor v1.5 delivers significant advancements in runtime security for Kubernetes environments. This release introduces **enhanced policy enforcement**, **streamlined management**, and **improved observability**, making it easier to secure workloads effectively.
 
