--- a/getting-started/release-notes/v1.3.md
+++ b/getting-started/release-notes/v1.3.md
@@ -1,4 +1,5 @@
-# KubeArmor v1.4.0 Release Blog
+# KubeArmor v1.3.0 Release Notes
+v1.3.0 release includes new improvements to enhance the security, usability, and performance of KubeArmor along with some bug fixes. We list major changes below.
 
 [KubeArmor Operator as the Default Installation Method](#kubearmor-operator-as-the-default-installation-method)
 
